# QALens

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  compose.yaml  hatch_build.py  pyproject.toml  render-build.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  parser_request.yml
.github/workflows/: ari-ci.yml  ci.yml  codeql.yml  docker-publish.yml  publish.yml  qara-ci.yml  scorecard.yml
docs/: api-reference.md  architecture.md  chat-and-llm.md  cli-reference.md  docker.md  getting-started.md  index.md  ingesting-reports.md  insight-engine.md  installation.md  parser-strategy.md  plugin-guide.md  roadmap.md  security-and-deployment.md  troubleshooting.md  ui-guide.md
examples/: normalized_run.json  qalens-ci.yml  sample_summary.md
examples/ci/: github-actions-example.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/compare-engine/: CompareEngine.tsx  index.ts  mockData.ts  types.ts
frontend/src/compare-engine/components/: CompareControlBar.tsx
frontend/src/compare-engine/hooks/: useCompareData.ts  useCompareState.ts
frontend/src/components/: Dropdown.tsx  Modal.tsx  PageHeader.tsx  Tooltip.tsx
frontend/src/components/icons/: TrophyIcon.tsx
frontend/src/hooks/: useProject.tsx
frontend/src/panels/: AnalysisPanel.tsx  ChatPanel.tsx  FailureFlakinessView.tsx  IncidentsPanel.tsx  RegressionsView.tsx  RiskPanel.tsx  RunTimelineStrip.tsx  RunsPanel.tsx  SettingsPanel.tsx
scripts/: extract_frontend.py  generate_test_data.py  seed_incident_runs.py
src/qalens/: __init__.py  cli.py  ownership.py  security.py  version.py
src/qalens/analyzers/: __init__.py  canonical.py  categorizer.py  clustering.py  comparison.py  decision.py  fingerprint.py  flaky.py  incidents.py  predictor.py  signatures.py
src/qalens/api/: __init__.py  _render.py  library.py
src/qalens/artifacts/: __init__.py  config.py  models.py  policy.py  selector.py  storage.py
src/qalens/cli/: __init__.py
src/qalens/db/: __init__.py  models.py  repository.py  schema.py
src/qalens/llm/: __init__.py  answer_plan.py  answer_types.py  client.py  config.py  context.py  context_date.py  context_history.py  context_risk.py  deterministic_answers.py  followups.py  intent_detection.py  prompts.py  routing.py  trend.py
src/qalens/models/: __init__.py  artifact_ref.py  attachment.py  failure.py  incident.py  insight.py  run.py  test_case.py  warnings.py
src/qalens/parsers/: __init__.py  allure.py  base.py  cypress.py  detector.py  extent.py  junit.py  playwright.py  testng.py
src/qalens/reports/: __init__.py  builder.py  model.py  renderers.py
src/qalens/server/: __init__.py  app.py  auth.py  models.py  routes_analysis.py  routes_compare.py  routes_decision.py  routes_evidence.py  routes_export.py  routes_homepage.py  routes_llm.py  routes_report.py  routes_runs.py  routes_settings.py  ui.py
src/qalens/utils/: __init__.py  fs.py  text.py
src/qara/: __init__.py  cli.py  security.py  version.py
src/qara/analytics/: __init__.py  owner_metrics.py  owner_queries.py  owner_resolution.py  schemas.py
src/qara/analyzers/: __init__.py  canonical.py  categorizer.py  clustering.py  comparison.py  fingerprint.py  flaky.py  incidents.py  predictor.py  signatures.py
src/qara/api/: __init__.py  _render.py  library.py
src/qara/artifacts/: __init__.py  config.py  image.py  models.py  policy.py  selector.py  storage.py
src/qara/cli/: __init__.py
src/qara/db/: __init__.py  models.py  repository.py  schema.py
src/qara/llm/: __init__.py  answer_plan.py  answer_types.py  client.py  config.py  context.py  context_date.py  context_history.py  context_risk.py  deterministic_answers.py  followups.py  intent_detection.py  prompts.py  routing.py  trend.py
src/qara/models/: __init__.py  artifact_ref.py  attachment.py  failure.py  incident.py  insight.py  run.py  test_case.py  warnings.py
src/qara/parsers/: __init__.py  allure.py  base.py  detector.py  extent.py
src/qara/server/: __init__.py  app.py  models.py  routes_analysis.py  routes_compare.py  routes_evidence.py  routes_homepage.py  routes_llm.py  routes_runs.py  ui.py
src/qara/utils/: __init__.py  fs.py  text.py
tests/: conftest_contracts.py  test_allure_parser.py  test_analyze_cli.py  test_analyze_pipeline.py  test_answer_plan.py  test_artifact_pipeline.py  test_ask_cli.py  test_canonical.py  test_categorizer.py  test_ci_gate.py  test_cli.py  test_clustering.py  test_compare_cli.py  test_comparison.py  test_contracts.py  test_cypress_parser.py  test_db_schema.py  test_default_scope.py  test_detector.py  test_extent_artifact_refs.py  test_extent_parser.py  test_fingerprint.py  test_flaky.py  test_followups.py  test_history_cli.py  test_homepage.py  test_incidents.py  test_ingest_cli.py  test_junit_parser.py  test_llm_client.py  test_llm_config.py  test_models.py  test_owner_mapping.py  test_playwright_parser.py  test_predictor.py  test_report_export.py  test_repository.py  test_routing.py  test_security_ingestion.py  test_server.py  (+3 more)
tests/analytics/: conftest.py  test_owner_metrics.py  test_owner_queries.py  test_owner_resolution.py
tests/fixtures/allure_sample/: .gitkeep  app.js  index.html
tests/fixtures/cypress_mochawesome_sample/: mochawesome.json
tests/fixtures/cypress_run_sample/: cypress-results.json
tests/fixtures/extent_sample/: .gitkeep  ExtentReport.html  Index.html
tests/fixtures/junit_sample/: TEST-shopnow.xml
tests/fixtures/playwright_html_sample/: index.html
tests/fixtures/playwright_json_sample/: report.json
tests/fixtures/testng_sample/: testng-results.xml
tmp_test_data/ShopNow_E-Commerce/: README.md
tmp_test_data/ShopNow_E-Commerce/run_019/: app.js
tmp_test_data/ShopNow_E-Commerce/run_029/: index.html
(+2237 files in other folders)
