[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qara-insights"
dynamic = ["version"]
description = "QARA — Quality Analysis & Root Automation: turn static test reports into triage-ready intelligence"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "QARA Contributors" }]
keywords = [
    "test automation",
    "root cause analysis",
    "test reporting",
    "QA",
    "allure",
    "extent reports",
    "failure analysis",
    "flaky tests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dateutil>=2.8",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-beautifulsoup4",
    "types-python-dateutil",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "pytest-httpx>=0.30",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://github.com/your-org/qara"
Documentation = "https://github.com/your-org/qara/tree/main/docs"
Repository = "https://github.com/your-org/qara"
Issues = "https://github.com/your-org/qara/issues"
Changelog = "https://github.com/your-org/qara/releases"

[project.scripts]
qara = "qara.cli:app"

[tool.hatch.version]
path = "src/qara/version.py"

[tool.hatch.build]
# Excluded from every build target (wheel + sdist).
# Hatchling does not read .gitignore outside a git repo, so list them here.
exclude = [
    "**/__pycache__",
    "**/__MACOSX",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/*.pyc",
    "**/*.pyo",
    ".venv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qara"]

# ---------------------------------------------------------------------------
# ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module (handled per file)
    "D104",  # Missing docstring in public package
    "D203",  # Conflicts with D211
    "D213",  # Conflicts with D212
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]

[tool.ruff.lint.isort]
known-first-party = ["qara"]

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["bs4.*", "sklearn.*", "lxml.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests",
]
filterwarnings = [
    # Pydantic model classes named Test* are not pytest test classes.
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/qara"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
