[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qalens"
dynamic = ["version"]
description = "QA Lens: turn static test reports into triage-ready intelligence"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "QA Lens Contributors" }]
keywords = [
    "test automation",
    "root cause analysis",
    "test reporting",
    "QA",
    "allure",
    "extent reports",
    "failure analysis",
    "flaky tests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "lxml>=6.1.0",
    "python-dateutil>=2.8",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.27",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "numpy>=1.26",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "hatch>=1.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-beautifulsoup4",
    "types-python-dateutil",
    "httpx>=0.27",
    "pytest-httpx>=0.30",
]

[project.urls]
Homepage      = "https://github.com/Arulprasath36/QALens"
Documentation = "https://github.com/Arulprasath36/QALens/tree/main/docs"
Repository    = "https://github.com/Arulprasath36/QALens"
Issues        = "https://github.com/Arulprasath36/QALens/issues"
Changelog     = "https://github.com/Arulprasath36/QALens/releases"

[project.scripts]
qalens = "qalens.cli:app"

[tool.hatch.version]
path = "src/qalens/version.py"

[tool.hatch.build]
# Excluded from every build target (wheel + sdist).
# Hatchling does not read .gitignore outside a git repo, so list them here.
exclude = [
    "**/__pycache__",
    "**/__MACOSX",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/*.pyc",
    "**/*.pyo",
    ".venv",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/qalens"]
# Include generated frontend assets even though src/qalens/server/static/ is gitignored.
# The custom build hook compiles the React app into this directory before hatchling
# packages the wheel, so end-users get the full UI with no Node.js required.
artifacts = ["src/qalens/server/static/**"]

[tool.hatch.build.targets.sdist]
# Ship the frontend source so `pip install qalens --no-binary` works.
# Listing files explicitly avoids accidentally including node_modules/.
include = [
    "/src",
    "/frontend/package.json",
    "/frontend/package-lock.json",
    "/frontend/index.html",
    "/frontend/vite.config.ts",
    "/frontend/tsconfig.json",
    "/frontend/tsconfig.app.json",
    "/frontend/tsconfig.node.json",
    "/frontend/postcss.config.ts",
    "/frontend/tailwind.config.ts",
    "/frontend/src",
    "/frontend/public",
    "/hatch_build.py",
    "/pyproject.toml",
    "/README.md",
    "/docs",
    "/LICENSE",
]

# ---------------------------------------------------------------------------
# ruff — linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module (handled per file)
    "D104",  # Missing docstring in public package
    "D203",  # Conflicts with D211
    "D213",  # Conflicts with D212
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]

[tool.ruff.lint.isort]
known-first-party = ["qalens"]

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["bs4.*", "sklearn.*", "lxml.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks integration tests",
]
filterwarnings = [
    # Pydantic model classes named Test* are not pytest test classes.
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["src/qalens"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
